--- a/IEEDE/dashboard/templates/citizen_login.html
+++ b/IEEDE/dashboard/templates/citizen_login.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Citizen Login || IEEDE</title>
-    <link rel="stylesheet" href="{% static '/css/citizen_login.css' %}">
+    <link rel="stylesheet" href="{% static '/css/citizen_login.css' %}" />
     <script src="{% static '/js/code.jquery.com_jquery-3.7.1.min.js' %}"></script>
   </head>
   <body>
     <section class="sec1">
       <div class="login">
         <div class="cover-pic">
-          <img src="{% static '/img/IEEDE_logo_blue.png' %}" alt="login-cover" />
+          <img
+            src="{% static '/img/IEEDE_logo_blue.png' %}"
+            alt="login-cover"
+          />
         </div>
         <div class="login-form-body">
           <h3>Citizen Login</h3>
@@ -25,22 +28,28 @@
             <div class="input-box" id="mecform">
               <label for="mec">Enter MEC ID</label>
               <input class="input" type="text" name="mec" id="mec" />
-              <span for="mec" id="mecerror">Invalid MEC ID</span>
+              <span id="mecerror" class="error-msg">Invalid MEC ID</span>
             </div>
             <input class="btn" id="otp-btn" type="submit" value="Send OTP" />
           </form>
-           <form class="login-form" id="logotpform">
-            <div class="input-box otp" id="otpfrom">
+
+          <form class="login-form hidden" id="logotpform" method="POST">
+            {% csrf_token %}
+            <div class="input-box otp" id="otpform">
               <label for="otp">Enter OTP</label>
-              <input class="input" type="password" name="otp" id="otp" />
-              <label for="otp" id="otperror">Invalid OTP</label>
+              <input class="input" type="text" name="otp" id="otp" />
+              <span id="otperror" class="error-msg">Invalid OTP</span>
             </div>
-            <input class="btn" id="otp-verify-btn" type="submit" value="Submit" />
+            <input
+              class="btn"
+              id="otp-verify-btn"
+              type="submit"
+              value="Verify OTP"
+            />
           </form>
         </div>
       </div>
     </section>
-
 
     <script src="{% static '/js/login.js' %}"></script>
   </body>
